# actix-web-and-sqlx

./: .env  Cargo.toml  README.md  docker-compose.yml
migrations/: 20230407091603_init.up.sql
src/: main.rs
src/api/: health.rs  users.rs
src/models/: app_config.rs  health.rs  mod.rs  schemas.rs  users.rs
